--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "formik": "^2.4.6",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
@@ -32,7 +34,8 @@
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
