--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-hookz/web": "^25.1.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
