--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
